Week 4 alert generation test